update: a busy time at the beach

--- a/My Library.bib
+++ b/My Library.bib
@@ -115,7 +115,9 @@
   issue = {7748},
   langid = {english},
   keywords = {!!!,Research data,Research management,to-read},
-  annotation = {Bandiera\_abtest: a Cg\_type: Comment Subject\_term: Research data, Research management},
+  annotation = {Bandiera\_abtest: a\\
+Cg\_type: Comment\\
+Subject\_term: Research data, Research management},
   file = {/Users/ericr/Zotero/storage/7TY5ENAP/Amrhein et al. - 2019 - Scientists rise up against statistical significanc.pdf;/Users/ericr/Zotero/storage/N93RSR22/d41586-019-00857-9.html}
 }
 
@@ -768,8 +770,8 @@
 @article{borkovicInvestigatingSexualDimorphism2013,
   title = {Investigating {{Sexual Dimorphism}} in {{Ceratopsid Horncores}}},
   author = {Borkovic, Benjamin},
-  editora = {University Of Calgary and University Of Calgary and Russell, Anthony},
-  editoratype = {collaborator},
+  namea = {University Of Calgary and University Of Calgary and Russell, Anthony},
+  nameatype = {collaborator},
   date = {2013},
   publisher = {Graduate Studies},
   doi = {10.11575/PRISM/26635},
@@ -1179,6 +1181,20 @@
   abstract = {Documenting variation in theropod dinosaurs is usually hindered by the lack of a large sample size and specimens representing several ontogenetic stages. Here, variation within 140 disassociated and seven in situ tyrannosaur teeth from the Upper Cretaceous (lower Maastrichtian) monodominant Albertosaurus sarcophagus (Theropoda: Tyrannosauridae) bonebed is documented. This sample represents the largest data set of teeth from one population of A. sarcophagus containing both adult and juvenile specimens. Tooth variation was assessed using multivariate analyses (principal component, discriminant, and canonical variate analyses). Heterodonty in the teeth of A. sarcophagus contributes to the large amount of variation in the data set. Premaxillary teeth are significantly different from maxillary and dentary teeth, but there is no quantifiable difference between a priori identified maxillary and dentary teeth. Juvenile and adult teeth of A. sarcophagus show apparent quantitative differences that are size dependent on closer investigation, suggesting a cautious approach when interpreting multivariate analyses to identify novel tooth morphologies. Multivariate analyses on teeth of A. sarcophagus and published tooth data from other North American tyrannosaurid species reveals species-level clusters with little separation. The degree of separation among tooth clusters may reveal a phylogenetic signal in tyrannosaurid teeth.},
   keywords = {To Read},
   file = {/Users/ericr/Zotero/storage/LR3TPL2A/Buckley et al. - 2010 - Quantifying tooth variation within a single popula.pdf;/Users/ericr/Zotero/storage/CYGFXJDC/Quantifying-tooth-variation-within-a-single.html}
+}
+
+@article{buddDynamicsStemCrown2020,
+  title = {The Dynamics of Stem and Crown Groups},
+  author = {Budd, Graham and Mann, Richard},
+  date = {2020-02-19},
+  journaltitle = {Science Advances},
+  shortjournal = {Science Advances},
+  volume = {6},
+  pages = {eaaz1626},
+  doi = {10.1126/sciadv.aaz1626},
+  abstract = {The fossil record of the origins of major groups such as animals and birds has generated considerable controversy, especially when it conflicts with timings based on molecular clock estimates. Here, we model the diversity of "stem" (basal) and "crown" (modern) members of groups using a "birth-death model," the results of which qualitatively match many large-scale patterns seen in the fossil record. Typically, the stem group diversifies rapidly until the crown group emerges, at which point its diversity collapses, followed shortly by its extinction. Mass extinctions can disturb this pattern and create long stem groups such as the dinosaurs. Crown groups are unlikely to emerge either cryptically or just before mass extinctions, in contradiction to popular hypotheses such as the "phylogenetic fuse". The patterns revealed provide an essential context for framing ecological and evolutionary explanations for how major groups originate, and strengthen our confidence in the reliability of the fossil record.},
+  keywords = {!!!,to-read},
+  file = {/Users/ericr/Zotero/storage/ZFPH8MCG/Budd and Mann - 2020 - The dynamics of stem and crown groups.pdf}
 }
 
 @article{bulleriCompetitionIncorporatingPositive2008,
@@ -1600,6 +1616,40 @@
   file = {/Users/ericr/Zotero/storage/YMD5UDBG/PAL_E3969.pdf}
 }
 
+@online{Checkout,
+  title = {Checkout},
+  url = {https://belomostore.com/checkout/onepage/},
+  urldate = {2024-04-22},
+  file = {/Users/ericr/Zotero/storage/ELKU6FXZ/onepage.html}
+}
+
+@online{Checkouta,
+  title = {Checkout},
+  url = {https://belomostore.com/checkout/onepage/},
+  urldate = {2024-04-22},
+  file = {/Users/ericr/Zotero/storage/K7XEUADN/onepage.html}
+}
+
+@article{chinsamyGenderIdentificationMesozoic2013,
+  title = {Gender Identification of the {{Mesozoic}} Bird {{Confuciusornis}} Sanctus},
+  author = {Chinsamy, Anusuya and Chiappe, Luis M. and Marugán-Lobón, Jesús and Chunling, Gao and Fengjiao, Zhang},
+  date = {2013-01-22},
+  journaltitle = {Nature Communications},
+  shortjournal = {Nat Commun},
+  volume = {4},
+  number = {1},
+  pages = {1381},
+  publisher = {Nature Publishing Group},
+  issn = {2041-1723},
+  doi = {10.1038/ncomms2377},
+  url = {https://www.nature.com/articles/ncomms2377},
+  urldate = {2024-04-28},
+  abstract = {Hundreds of specimens of the beaked bird Confuciusornis sanctus have been recovered from Early Cretaceous lake deposits of northeastern China. These birds show remarkable variation in size and plumage, with some displaying two long, central ornamental rectrices (tail feathers) and others lacking them altogether. Although, traditionally specimens with ornamental rectrices were interpreted as males and those without them as females, this supposed sexual dimorphism has remained unconfirmed. Here we report on the discovery of medullary bone, a tissue unique to reproductively active female birds, in a specimen of C. sanctus (DNHM-D1874) lacking these feathers. Our discovery constitutes the first case of gender identification in a Mesozoic bird, and it provides undisputed evidence that individuals of C. sanctus without ornamental rectrices are females. By permitting gender identification in C. sanctus, our results provide insight into the onset of sexual maturity and attainment of adult body size of this and other early birds.},
+  langid = {english},
+  keywords = {!!!,Palaeontology,to-read,Zoology},
+  file = {/Users/ericr/Zotero/storage/IZX88NMR/Chinsamy et al. - 2013 - Gender identification of the Mesozoic bird Confuci.pdf}
+}
+
 @article{christiansenMassPredictionTheropod2004,
   title = {Mass {{Prediction}} in {{Theropod Dinosaurs}}},
   author = {Christiansen, P. and Fariña †, R.A.},
@@ -1786,7 +1836,7 @@
   file = {/Users/ericr/Zotero/storage/7CF7XFZ2/Cooper et al. - 2020 - Body dimensions of the extinct giant shark Otodus .pdf}
 }
 
-@article{coppock2023AdditionalAlbertosaurusSarcophagus,
+@article{coppockAdditionalAlbertosaurusSarcophagus2023,
   title = {Additional Albertosaurus Sarcophagus (Tyrannosauridae, Albertosaurinae) Material from the Danek Bonebed of Edmonton, Alberta, Canada with Evidence of Cannibalism.},
   author = {Coppock, Colton and Currie, Philip J.},
   date = {2023-12-12},
@@ -2127,6 +2177,25 @@
   urldate = {2024-03-27},
   keywords = {!!!,to-read},
   file = {/Users/ericr/Zotero/storage/NA9LB76V/article.html}
+}
+
+@article{dodsonQuantitativeAspectsRelative1976,
+  title = {Quantitative {{Aspects}} of {{Relative Growth}} and {{Sexual Dimorphism}} in {{Protoceratops}}},
+  author = {Dodson, Peter},
+  date = {1976},
+  journaltitle = {Journal of Paleontology},
+  volume = {50},
+  number = {5},
+  eprint = {1303590},
+  eprinttype = {jstor},
+  pages = {929--940},
+  publisher = {Paleontological Society},
+  issn = {0022-3360},
+  url = {https://www.jstor.org/stable/1303590},
+  urldate = {2024-04-28},
+  abstract = {The Upper Cretaceous Djadochta Formation of Mongolia has yielded a remarkable ontogenetic series of skulls and skeletons of the primitive ceratopsian dinosaur, Protoceratops andrewsi. Twenty-four skulls in the collection of the American Museum of Natural History are subjected to formal biometric analysis for the first time. Allometric coefficients are calculated for 40 variables. Characters of the frill are found to be very variable, and ontogenetic changes in the arrangement of the adductor muscles presumed to originate from it cannot be interpreted as improving or even maintaining the functional constancy of the masticatory system. A definitive determination of sexual dimorphism was permitted by principal coordinates analysis, and measurements of the frill play a prominent part in the dimorphism, verifying that in its development the frill has considerably more significance than simply serving as a site of origin of masticatory muscles. The sample consists of 8 juveniles, 8 males and 7 females, with one individual indeterminate; males and females apparently attained about the same size.},
+  keywords = {!!!,to-read},
+  file = {/Users/ericr/Zotero/storage/FY6WAPRL/Dodson - 1976 - Quantitative Aspects of Relative Growth and Sexual.pdf}
 }
 
 @article{dodsonTaphonomyPaleoecologyDinosaur1980,
@@ -2892,6 +2961,25 @@
   file = {/Users/ericr/Zotero/storage/QT5N6YNS/r-fitting-data.html}
 }
 
+@article{foffaComparativeFunctionalMorphology2024,
+  title = {Comparative Functional Morphology Indicates Niche Partitioning among Sympatric Marine Reptiles},
+  author = {Foffa, Davide and Young, Mark T. and Brusatte, Stephen L.},
+  date = {2024-05},
+  journaltitle = {Royal Society Open Science},
+  shortjournal = {R. Soc. Open Sci.},
+  volume = {11},
+  number = {5},
+  pages = {231951},
+  issn = {2054-5703},
+  doi = {10.1098/rsos.231951},
+  url = {https://royalsocietypublishing.org/doi/10.1098/rsos.231951},
+  urldate = {2024-05-18},
+  abstract = {Mesozoic marine ecosystems were dominated by diverse lineages of aquatic tetrapods. For over 50 Ma in the Jurassic until the Early Cretaceous, plesiosaurians, ichthyosaurians and thalattosuchian crocodylomorphs coexisted at the top levels of trophic food webs. We created a functional dataset of continuous craniomandibular and dental characters known from neontological studies to be functionally significant in modern aquatic tetrapods. We analysed this dataset with multivariate ordination and inferential statistics to assess functional similarities and differences in the marine reptile faunas of two well-sampled Jurassic ecosystems deposited in the same seaway: the Oxford Clay Formation (OCF, Callovian–early Oxfordian, Middle–Late Jurassic) and the Kimmeridge Clay Formation (KCF, Kimmeridgian–Tithonian, Late Jurassic) of the UK. Lower jaw-based macroevolutionary trends are similar to those of tooth-based diversity studies. Closely related species cluster together, with minimal overlaps in the morphospace. Marine reptile lineages were characterized by the distinctive combinations of features, but we reveal multiple instances of morphofunctional convergence among different groups. We quantitatively corroborate previous observations that the ecosystems in the OCF and KCF were markedly distinct in faunal composition and structure. Morphofunctional differentiation may have enabled specialization and was an important factor facilitating the coexistence of diverse marine reptile assemblages in deep time.},
+  langid = {english},
+  keywords = {!!,to-read},
+  file = {/Users/ericr/Zotero/storage/97ZQVXSD/Foffa et al. - 2024 - Comparative functional morphology indicates niche .pdf}
+}
+
 @article{fordNewEraMorphological2023,
   title = {A {{New Era}} of {{Morphological Investigations}}: {{Reviewing}} Methods for Comparative Anatomical Studies},
   shorttitle = {A {{New Era}} of {{Morphological Investigations}}},
@@ -3515,6 +3603,23 @@
   langid = {english},
   keywords = {!!,extinction,modelling,sequence stratigraphy,to-read},
   file = {/Users/ericr/Zotero/storage/8BRF3SD5/Holland and Patzkowsky - 2015 - The stratigraphy of mass extinction.pdf;/Users/ericr/Zotero/storage/S9XX7UBQ/pala.html}
+}
+
+@article{holmesEvaluationPhotosensoryCharacteristics2024,
+  title = {Evaluation of the Photosensory Characteristics of the Lateral and Pineal Eyes of {{Plioplatecarpus}} ({{Squamata}}, {{Mosasauridae}}) Based on an Exceptionally Preserved Specimen from the {{Bearpaw Shale}} ({{Campanian}}, {{Upper Cretaceous}}) of Southern {{Alberta}}},
+  author = {Holmes, Robert B.},
+  date = {2024},
+  journaltitle = {Journal of Vertebrate Paleontology},
+  volume = {0},
+  number = {0},
+  pages = {e2335174},
+  publisher = {Taylor \& Francis},
+  issn = {0272-4634},
+  doi = {10.1080/02724634.2024.2335174},
+  url = {https://doi.org/10.1080/02724634.2024.2335174},
+  urldate = {2024-04-28},
+  abstract = {The skull of Plioplatecarpus possesses large orbits and a large parietal foramen. Although the large orbits suggest that Plioplatecarpus possessed large eyes with enhanced visual performance, none of the previously described skulls include a sclerotic ring, and so it has been impossible in the past to reconstruct their size or optical properties. A recently collected skull with a sclerotic ring preserved in situ provides for the first time the data to do so. The dimensions of the sclerotic ring demonstrate that, although the f-number of the eyeball was not low enough to support the hypothesis that Plioplatecarpus was adapted to low light conditions, the eyeball was nevertheless large and possessed increased visual acuity and sensitivity that enabled the mosasaur to operate efficiently in both light-rich and light-poor conditions and possibly other conditions of reduced visibility. Proportions of this skull also suggest that Plioplatecarpus possessed a relatively wide binocular field of vision, providing stereoscopic vision, and further increasing both acuity and sensitivity, enhancing its ability to effectively detect and track quickly moving objects under a wide range of light conditions. A greatly enlarged parietal foramen implies the presence of a large parietal eye, the significance of which is uncertain, but it may have enhanced the ability to regulate migratory behavior.},
+  keywords = {!!,to-read}
 }
 
 @article{holtzTheropodGuildStructure2021,
@@ -4554,6 +4659,27 @@
   file = {/Users/ericr/Zotero/storage/BSTARCWU/Maina - 2000 - Comparative respiratory morphology Themes and pri.pdf;/Users/ericr/Zotero/storage/ILNCG64J/(SICI)1097-0185(20000215)261125AID-AR63.0.html}
 }
 
+@article{maiorinoMalesResembleFemales2015,
+  title = {Males {{Resemble Females}}: {{Re-Evaluating Sexual Dimorphism}} in {{Protoceratops}} Andrewsi ({{Neoceratopsia}}, {{Protoceratopsidae}})},
+  shorttitle = {Males {{Resemble Females}}},
+  author = {Maiorino, Leonardo and Farke, Andrew A. and Kotsakis, Tassos and Piras, Paolo},
+  date = {2015-05-07},
+  journaltitle = {PLOS ONE},
+  shortjournal = {PLOS ONE},
+  volume = {10},
+  number = {5},
+  pages = {e0126464},
+  publisher = {Public Library of Science},
+  issn = {1932-6203},
+  doi = {10.1371/journal.pone.0126464},
+  url = {https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0126464},
+  urldate = {2024-04-28},
+  abstract = {Background Protoceratops andrewsi (Neoceratopsia, Protoceratopsidae) is a well-known dinosaur from the Upper Cretaceous of Mongolia. Some previous workers hypothesized sexual dimorphism in the cranial shape of this taxon, using qualitative and quantitative observations. In particular, width and height of the frill as well as the development of a nasal horn have been hypothesized as potentially sexually dimorphic. Methodology/Principal Findings Here, we reassess potential sexual dimorphism in skulls of Protoceratops andrewsi by applying two-dimensional geometric morphometrics to 29 skulls in lateral and dorsal views. Principal Component Analyses and nonparametric MANOVAs recover no clear separation between hypothetical “males” and “females” within the overall morphospace. Males and females thus possess similar overall cranial morphologies. No differences in size between “males” and “females” are recovered using nonparametric ANOVAs. Conclusions/Significance Sexual dimorphism within Protoceratops andrewsi is not strongly supported by our results, as previously proposed by several authors. Anatomical traits such as height and width of the frill, and skull size thus may not be sexually dimorphic. Based on PCA for a data set focusing on the rostrum and associated ANOVA results, nasal horn height is the only feature with potential dimorphism. As a whole, most purported dimorphic variation is probably primarily the result of ontogenetic cranial shape changes as well as intraspecific cranial variation independent of sex.},
+  langid = {english},
+  keywords = {!!!,Clustering algorithms,Cranium,Dinosaurs,Morphogenesis,Morphometry,Museum collections,Principal component analysis,Skull,to-read},
+  file = {/Users/ericr/Zotero/storage/ELNCG3GU/Maiorino et al. - 2015 - Males Resemble Females Re-Evaluating Sexual Dimor.pdf}
+}
+
 @article{malakhoff15YearsNo2021,
   title = {After 15 Years, No Evidence for Trophic Cascades in Marine Protected Areas},
   author = {Malakhoff, Katrina D. and Miller, Robert J.},
@@ -4578,6 +4704,25 @@
   abstract = {Use to predict sex by given weight and height},
   langid = {english},
   file = {/Users/ericr/Zotero/storage/LDLD2DG8/male-female-height-and-weight.html}
+}
+
+@article{mallonFeedingHeightStratification2013,
+  title = {Feeding Height Stratification among the Herbivorous Dinosaurs from the {{Dinosaur Park Formation}} (Upper {{Campanian}}) of {{Alberta}}, {{Canada}}},
+  author = {Mallon, Jordan C. and Evans, David C. and Ryan, Michael J. and Anderson, Jason S.},
+  date = {2013-04-04},
+  journaltitle = {BMC Ecology},
+  shortjournal = {BMC Ecol},
+  volume = {13},
+  number = {1},
+  pages = {14},
+  issn = {1472-6785},
+  doi = {10.1186/1472-6785-13-14},
+  url = {https://doi.org/10.1186/1472-6785-13-14},
+  urldate = {2024-04-30},
+  abstract = {Herbivore coexistence on the Late Cretaceous island continent of Laramidia has been a topic of great interest, stemming from the paradoxically high diversity and biomass of these animals in relation to the relatively small landmass available to them. Various hypotheses have been advanced to account for these facts, of which niche partitioning is among the most frequently invoked. However, despite its wide acceptance, this hypothesis has not been rigorously tested. This study uses the fossil assemblage from the Dinosaur Park Formation of Alberta as a model to investigate whether niche partitioning facilitated herbivorous dinosaur coexistence on Laramidia. Specifically, the question of feeding height stratification is examined in light of the role it plays in facilitating modern ungulate coexistence.},
+  langid = {english},
+  keywords = {!!,Ankylosauria,Ceratopsidae,Dinosaur Park Formation,Evolutionary palaeoecology,Feeding height stratification,Hadrosauridae,Niche partitioning,to-read},
+  file = {/Users/ericr/Zotero/storage/PVMCMQHP/Mallon et al. - 2013 - Feeding height stratification among the herbivorou.pdf}
 }
 
 @article{mallonRecognizingSexualDimorphism2017,
@@ -4816,6 +4961,24 @@
   langid = {english},
   keywords = {Birds,Dinosaurs,Drag,Hands,Ichnology,Jurassic period,Tails,Theropoda},
   file = {/Users/ericr/Zotero/storage/85AGLFN3/Milner et al. - 2009 - Bird-Like Anatomy, Posture, and Behavior Revealed .pdf}
+}
+
+@article{mohrMorphometricAnalysisLate2024,
+  title = {Morphometric Analysis of the {{Late Cretaceous}} {{{\emph{Placenticeras}}}} of {{Alabama}}, {{USA}}: Sexual Dimorphism, Allometry, and Implications for Taxonomy},
+  shorttitle = {Morphometric Analysis of the {{Late Cretaceous}} {{{\emph{Placenticeras}}}} of {{Alabama}}, {{USA}}},
+  author = {Mohr, Rachel C. and Tobin, Thomas S. and Tompkins, Emily M.},
+  date = {2024-05-02},
+  journaltitle = {Paleobiology},
+  shortjournal = {Paleobiology},
+  pages = {1--32},
+  issn = {0094-8373, 1938-5331},
+  doi = {10.1017/pab.2024.3},
+  url = {https://www.cambridge.org/core/product/identifier/S0094837324000034/type/journal_article},
+  urldate = {2024-05-04},
+  abstract = {A traditional typological approach to taxonomy often does not adequately account for intraspecific variation and can result in taxonomic oversplitting. For many groups, including ammonoids of the Placenticeras genus, intraspecific variation documented in recent studies (e.g., ontogenetic changes, sexual dimorphism, polymorphism) challenges the historic proliferation of species names. Here, we used a population approach to taxonomy and quantitatively evaluated morphometric variation in a sample of Late Cretaceous (Santonian–Campanian) Placenticeras from Alabama and adjacent counties.},
+  langid = {english},
+  keywords = {!!!,to-read},
+  file = {/Users/ericr/Zotero/storage/GD4LGPQM/Mohr et al. - 2024 - Morphometric analysis of the Late Cretaceous Pl.pdf}
 }
 
 @article{mohrPutativeAvianTeeth2023,
@@ -5728,7 +5891,7 @@
   urldate = {2024-04-18},
   abstract = {Pedogenic features and geochemical signatures of paleosol profiles exposed in the Horseshoe Canyon Formation (HCFm) were studied to reconstruct the ancient environments and climates that prevailed at high latitude (\textasciitilde 60°N) in the North American Western Interior during the late Campanian to early Maastrichtian. Eight pedotypes representing hydromorphic, moderately-drained and well-drained paleosols were recognized. When considered within their stratigraphic context, these paleosols show that palaeoenvironmental and palaeoclimatic changes occurred either gradually between major lithological subdivisions of the HCFm or relatively rapidly within subdivisions. Hydromorphic paleosols, predominant in the coal-bearing stratigraphic interval at the base of the HCFm, were gradually replaced by well-drained paleosols in the overlying coal-poor interval. While climate remained warm and humid during this change in soil drainage conditions, mean annual temperature and precipitation dropped rapidly higher in section, shortly prior to the Campanian–Maastrichtian boundary, without concomitant lithological or pedological changes. A brief return of poorly-drained paleosols in the middle of the HCFm coincides with a regional marine transgression (Drumheller Marine Tongue). Well-drained palaeoenvironments, associated with a warm and dry climate, persisted through the upper part of the HCFm until a gradual return to poorly-drained conditions and to a warm, humid climate occurred at the top of the formation. An important decline in turtle diversity through the HCFm, previously attributed to climate, is shown to coincide instead with changes in soil drainage conditions, where aridity, landscape instability, and migratory barriers possibly acted as secondary limiting factors to faunal recovery.},
   keywords = {!!!,Faunal change,Horseshoe Canyon Formation,Palaeoclimate,Palaeoenvironment,Palaeopedology,Paleosol,to-read},
-  file = {/Users/ericr/Zotero/storage/P4DP7EGR/S0031018212006785.html}
+  file = {/Users/ericr/Zotero/storage/N7ZPFT3E/Quinney et al. - 2013 - Palaeoenvironmental and palaeoclimatic reconstruct.pdf;/Users/ericr/Zotero/storage/P4DP7EGR/S0031018212006785.html}
 }
 
 @article{rafteryBayesianAnalysisPoisson1986,
@@ -6092,6 +6255,26 @@
   file = {/Users/ericr/Zotero/storage/VNDWSWKS/Rogers et al. - 2024 - Osteohistological insight into the growth dynamics.pdf}
 }
 
+@article{rogersOsteohistologicalInsightGrowth2024a,
+  title = {Osteohistological Insight into the Growth Dynamics of Early Dinosaurs and Their Contemporaries},
+  author = {Rogers, Kristina Curry and Martínez, Ricardo N. and Colombi, Carina and Rogers, Raymond R. and Alcober, Oscar},
+  date = {2024-04-03},
+  journaltitle = {PLOS ONE},
+  shortjournal = {PLOS ONE},
+  volume = {19},
+  number = {4},
+  pages = {e0298242},
+  publisher = {Public Library of Science},
+  issn = {1932-6203},
+  doi = {10.1371/journal.pone.0298242},
+  url = {https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0298242},
+  urldate = {2024-05-04},
+  abstract = {Dinosauria debuted on Earth’s stage in the aftermath of the Permo-Triassic Mass Extinction Event, and survived two other Triassic extinction intervals to eventually dominate terrestrial ecosystems. More than 231 million years ago, in the Upper Triassic Ischigualasto Formation of west-central Argentina, dinosaurs were just getting warmed up. At this time, dinosaurs represented a minor fraction of ecosystem diversity. Members of other tetrapod clades, including synapsids and pseudosuchians, shared convergently evolved features related to locomotion, feeding, respiration, and metabolism and could have risen to later dominance. However, it was Dinosauria that radiated in the later Mesozoic most significantly in terms of body size, diversity, and global distribution. Elevated growth rates are one of the adaptations that set later Mesozoic dinosaurs apart, particularly from their contemporary crocodilian and mammalian compatriots. When did the elevated growth rates of dinosaurs first evolve? How did the growth strategies of the earliest known dinosaurs compare with those of other tetrapods in their ecosystems? We studied femoral bone histology of an array of early dinosaurs alongside that of non-dinosaurian contemporaries from the Ischigualasto Formation in order to test whether the oldest known dinosaurs exhibited novel growth strategies. Our results indicate that the Ischigualasto vertebrate fauna collectively exhibits relatively high growth rates. Dinosaurs are among the fastest growing taxa in the sample, but they occupied this niche alongside crocodylomorphs, archosauriformes, and large-bodied pseudosuchians. Interestingly, these dinosaurs grew at least as quickly, but more continuously than sauropodomorph and theropod dinosaurs of the later Mesozoic. These data suggest that, while elevated growth rates were ancestral for Dinosauria and likely played a significant role in dinosaurs’ ascent within Mesozoic ecosystems, they did not set them apart from their contemporaries.},
+  langid = {english},
+  keywords = {!!,Bone remodeling,Dinosaurs,Femur,Histology,Morphogenesis,Osteocytes,to-read,Triassic period,Vertebrates},
+  file = {/Users/ericr/Zotero/storage/YJ4SB7T7/Rogers et al. - 2024 - Osteohistological insight into the growth dynamics.pdf}
+}
+
 @online{RoleDecayMineralization,
   title = {The Role of Decay and Mineralization in the Preservation of Soft-Bodied Fossils - {{ProQuest}}},
   url = {https://www.proquest.com/openview/b9c933313ac7d32a56cce495a89812c2/1?pq-origsite=gscholar&cbl=35031},
@@ -6265,6 +6448,24 @@
   file = {/Users/ericr/Zotero/storage/KI4EFIWV/Scheyer et al. - 2010 - Developmental palaeontology of Reptilia as reveale.pdf;/Users/ericr/Zotero/storage/JKUCADVF/S1084952109002304.html}
 }
 
+@article{scheyerPseudosuchianRecordPaleohistology2024,
+  title = {The Pseudosuchian Record in Paleohistology: {{A}} Small Review},
+  shorttitle = {The Pseudosuchian Record in Paleohistology},
+  author = {Scheyer, Torsten M.},
+  date = {2024-04-24},
+  journaltitle = {The Anatomical Record},
+  shortjournal = {The Anatomical Record},
+  pages = {ar.25455},
+  issn = {1932-8486, 1932-8494},
+  doi = {10.1002/ar.25455},
+  url = {https://anatomypubs.onlinelibrary.wiley.com/doi/10.1002/ar.25455},
+  urldate = {2024-04-28},
+  abstract = {Archosauria originated around the Earth's largest biotic crisis that severely affected all ecosystems globally, the Permotriassic Mass extinction event, and comprises two crown-group lineages: the bird-lineage and the crocodylian lineage. The bird lineage includes the iconic pterosaurs, as well as dinosaurs and birds, whereas the crocodylian lineage includes clades such as aetosaurs, poposaurs, “rauisuchians,” as well as Crocodylomorpha; the latter being represented today only by less than 30 extant species of Crocodylia. Despite playing important roles during Mesozoic and Cenozoic ecosystems, both on land and in water, Pseudosuchia received far less attention compared to the birdlineage, which is also reflected in number and scope of histological studies so far. Lately, the field has seen a shift of focus toward pseudosuchians, however, and the symposium on “Paleohistological Inferences of Paleobiological Traits in Pseudosuchia” held during the International Congress of Vertebrate Morphology 2023 in Cairns, Queensland, Australia, is the latest proof of that. To put these novel aspects of paleohistological and paleobiological research into context, an overview of the non-extant pseudosuchian taxa whose postcranial bones were studied so far is provided here (c. 80 species out of a total of more than 700 extinct species described) and recent trends in pseudosuchian osteohistology are highlighted. In addition, histological studies on cranial and dental material and other potential hard tissues, such as eggshells and otoliths, are briefly reviewed as well.},
+  langid = {english},
+  keywords = {!!,to-read},
+  file = {/Users/ericr/Zotero/storage/H54DULAJ/Scheyer - 2024 - The pseudosuchian record in paleohistology A smal.pdf}
+}
+
 @article{schoepferTriassicJurassicTransition2022,
   title = {The {{Triassic}}–{{Jurassic}} Transition – {{A}} Review of Environmental Change at the Dawn of Modern Life},
   author = {Schoepfer, Shane D. and Algeo, Thomas J. and family=Schootbrugge, given=Bas, prefix=van de, useprefix=true and Whiteside, Jessica H.},
@@ -6375,6 +6576,23 @@
   abstract = {Mosasaurids were highly diverse and dominant as predators in late Cretaceous marine ecosystems. In the Maastrichtian, the Halisaurinae, a clade of relatively small-bodied mosasaurids, became common, especially in North Africa. Here, we report a new species of halisaurine from the lower Maastrichtian Dakhla Shale of the Western Desert of Egypt. Halisaurus hebae sp. nov. resembles Halisaurus platyspondylus and H. arambourgi in the shape of the frontal, suggesting close affinity with those species. A revised halisaurine phylogeny shows a cluster of species characterized by modification of the orbital bones to accommodate large eyes, suggesting a shift towards the use of visual cues to find prey, perhaps in low light conditions. The abundance and diversity of halisaurines in Africa contrasts with their relative rarity elsewhere in the world, emphasizing the regionalization of marine reptile faunas in the Maastrichtian.},
   keywords = {!!,Halisaurinae,Late Cretaceous,Mosasauridae,Paleobiogeography,Squamata,Tethys,to-read},
   file = {/Users/ericr/Zotero/storage/3PNZQMWD/Shaker et al. - 2023 - A new species of Halisaurus (Mosasauridae Halisau.pdf;/Users/ericr/Zotero/storage/MFK3FAQ3/S0195667123002471.html}
+}
+
+@article{sharpeCraniomandibularAnatomyJuvenile2024,
+  title = {Craniomandibular Anatomy of a Juvenile Specimen of {{Edmontosaurus}} Regalis {{Lambe}}, 1917 Clarifies Issues in Ontogeny and Biogeography},
+  author = {Sharpe, Henry S. and Powers, Mark J. and Dyer, Aaron D. and Rhodes, Matthew M. and McIntosh, Annie P. and Garros, Christiana W. and Currie, Philip J. and Funston, Gregory F.},
+  date = {2024},
+  journaltitle = {Journal of Vertebrate Paleontology},
+  volume = {0},
+  number = {0},
+  pages = {e2326644},
+  publisher = {Taylor \& Francis},
+  issn = {0272-4634},
+  doi = {10.1080/02724634.2024.2326644},
+  url = {https://doi.org/10.1080/02724634.2024.2326644},
+  urldate = {2024-04-28},
+  abstract = {Edmontosaurus regalis is a hadrosaurid represented by abundant fossil material from the late Campanian–early Maastrichtian of what is now Alberta, Canada. Despite its prevalence, juvenile craniomandibular elements of E. regalis are poorly known. A newly collected partial skeleton from the Horseshoe Canyon Formation, UALVP 60425, represents a small saurolophine with a partial skull (skull length ∼500 mm). It can be referred to Edmontosaurini based on the presence of a postorbital fossa and anteroposteriorly long frontals that lack a dorsally oriented nasal contact and contribute significantly to the orbital margin. Despite its small size and presumed immaturity, UALVP 60425 is assigned to E. regalis based on a horizontal shelf on the postorbital process of the jugal. The deep postorbital fossa that, in part, diagnoses E. regalis is acquired during growth. UALVP 60425 shares many features with the Alaskan Prince Creek saurolophine (Ugrunaaluk kuukpikensis); both show consistent anatomical differences in the lacrimal, jugal, and postorbitals from E. annectens throughout their growth series. New data from UALVP 6025 supports referring the Alaskan saurolophine material to Edmontosaurus cf. regalis in the absence of large-sized cranial material from the Prince Creek Formation.},
+  keywords = {!!!,to-read}
 }
 
 @article{shimadaBodyJawDentition2021,
@@ -7258,8 +7476,8 @@
   title = {Cranial {{Anatomy}} and {{Ontogeny}} of {{Gorgosaurus}} Libratus ({{Tyrannosauridae}}: {{Albertosaurinae}})},
   shorttitle = {Cranial {{Anatomy}} and {{Ontogeny}} of {{Gorgosaurus}} Libratus ({{Tyrannosauridae}}},
   author = {Voris, Jared Thomas},
-  editora = {University Of Calgary and University Of Calgary and Zelenitsky, Darla Karen},
-  editoratype = {collaborator},
+  namea = {University Of Calgary and University Of Calgary and Zelenitsky, Darla Karen},
+  nameatype = {collaborator},
   date = {2018-12-06},
   publisher = {Graduate Studies},
   doi = {10.11575/PRISM/34903},
